<resources>
    <string name="app_name">Games Library</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="account">Already have an account?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="addNew">Add new</string>
    <string name="add">Add</string>
    <string name="library">Library</string>
    <string name="title">Title</string>
    <string name="developer">Developer</string>
    <string name="genre">Genre</string>
    <string name="tags">Tags</string>
    <string name="publish_date">Publish date</string>
    <string name="price">Price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Add to favourite</string>
    <string name="played">Already played</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
</resources>